[project]
name = "ai-fashion-stylist-recommender"
version = "0.1.0"
description = "AI Fashion Stylist Recommender"
requires-python = ">=3.11"

dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "scikit-learn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
